--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tsparticles/react": "^3.0.0",
     "antd": "^5.22.2",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
@@ -18,7 +17,8 @@
     "react-icons": "^5.3.0",
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
-    "tsparticles": "^3.8.1"
+     "tsparticles": "^2.0.0",  
+  "@tsparticles/react": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
