--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router": "^6.28.0",
-    "react-router-dom": "^6.28.0",
-     "tsparticles": "^2.0.0",  
-  "@tsparticles/react": "^2.0.0"
-  },
+    "react-router-dom": "^6.28.0"
+    },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
